--- a/facia-tool/public/js/widgets/columns/fronts-config.html
+++ b/facia-tool/public/js/widgets/columns/fronts-config.html
@@ -200,7 +200,7 @@
                 </div>
             </div>
             <!-- /ko -->
-
+            <collection-drop-widget></collection-drop-widget>
             <label>Title</label>
             <input type="text" class="title--input" data-bind="
                 value: meta.displayName"/>
